--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ h1 {
  h5 {
     color: lightskyblue;
  }
- .Distribution {
+ .bordure {
     background-color: darkred;
     color: white;
     margin: 0px;
